--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/jdbc_schema?serverTimezone=Europe/London
 spring.datasource.username=root
-spring.datasource.password=Adrianek2007
+spring.datasource.password=pass
 
